Bug Hot Fix | Letter spacing header 2 small.css

--- a/lesson4_/css/small.css
+++ b/lesson4_/css/small.css
@@ -22,8 +22,7 @@ body {
   }
   
   header h2 {  
-    font-size: 0.9em;
-    letter-spacing: 1.5;
+    font-size: 0.9em;    
     margin-top: -28px;
     padding-bottom: 28px;
   }
